--- a/portfolio.css
+++ b/portfolio.css
@@ -1,7 +1,7 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 
@@ -52,8 +52,9 @@ nav  a{
 }
 
 .rightblock{
-    width: 30%;
+    width: 40%;
     margin-top: 80px;
+    margin-right: 60px;
 }
 
 .rightblock img{
@@ -137,37 +138,123 @@ nav li a:hover{
     transform: scale(1.2);
 }
 
-.secondsection{
-    /* margin-top:4rem; */
-}
 
-#about{
-    text-align: center;
-} 
-
-.about-container{
-    margin: 2rem 4rem;
-border: 1px solid black;
-display: flex;
-/* padding: 2rem; */
-justify-content: space-between;
-}
-
-.about-text{
-width: 70%; 
-line-height: 1.5em;
-padding: 2rem;
-}
-
-.about-img{
-    width: 20%;
-}
-
-hr{
-    width: 70%;             
-  margin: 8rem auto 3 rem;       
+ hr{
+ width: 70%;             
+ /* margin:  auto; */
+ margin: 4rem auto;
   border: none;            
   height: 2px;             
   background-color: rgb(147, 147, 213);
 }
+ 
+#about{
+    text-align: center;
+    color: rgb(147, 147, 213);
+}
 
+.about-container{
+    margin: 2rem;
+    display: flex;
+    border: 2px solid #eee;
+    padding: 1rem;
+    align-items: flex-start;
+     height: auto; 
+}
+
+.about-img{
+    width: 30%; 
+}
+
+.about-img img{
+    width: 100%;
+}
+
+.about-text{
+    line-height: 1.5rem;
+    margin-left: 2rem;
+}
+
+
+.thirdsection{
+    margin: 6em 0;
+} 
+
+
+
+.skill-container{
+   
+    display: flex;
+    justify-content: space-around;
+}
+
+#boxes{
+    border: 2px solid #eee;
+    padding: 2em;
+    line-height: 1.5em;
+    border-radius: 10px;
+    box-shadow: 0 0 6px rgba(0,0,0.1);
+    transition: 0.8s;
+    width: 10em;
+}
+
+#skill{
+    margin: 2.5em;
+    text-align: center;
+    color: rgb(147, 147, 213);
+}
+
+#boxes:hover{
+    transform: scale(1.1);
+}
+
+#headings{
+    margin-bottom: 0.8em;
+}
+
+
+
+.contact {
+    border: 2px solid #eee;
+    margin: 0 6em;
+    padding: 3em;
+    border-radius: 8px;
+  }
+  
+  #getintouch {
+    text-align: center;
+    margin-bottom: 1.5em;
+  }
+  
+  .contact-field {
+    margin-bottom: 1em;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .contact-field label {
+    font-weight: bold;
+    margin-bottom: 0.5em;
+  }
+  
+  .contact-field input {
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+  }
+  
+  button {
+    display: block;
+    padding: 0.7em 2em;
+    margin-top: 1em;
+    border: none;
+    background-color: #333;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: #555;
+  }
+  
