--- a/portfolio.css
+++ b/portfolio.css
@@ -243,7 +243,7 @@ nav li a:hover{
     border-radius: 4px;
   }
   
-  button {
+  #Cbutton {
     display: block;
     padding: 0.7em 2em;
     margin-top: 1em;
@@ -254,7 +254,7 @@ nav li a:hover{
     cursor: pointer;
   }
   
-  button:hover {
+  #Cbutton:hover {
     background-color: #555;
   }
   
