--- a/portfolio.css
+++ b/portfolio.css
@@ -216,7 +216,7 @@ nav li a:hover{
 
 .contact {
     border: 2px solid #eee;
-    margin: 0 6em;
+    margin: 6em 6em;
     padding: 3em;
     border-radius: 8px;
   }
@@ -246,15 +246,59 @@ nav li a:hover{
   #Cbutton {
     display: block;
     padding: 0.7em 2em;
-    margin-top: 1em;
+    margin-top: 3em;
     border: none;
     background-color: #333;
     color: white;
     border-radius: 4px;
     cursor: pointer;
+    width: 50%;
+    margin-left:11rem;
   }
   
   #Cbutton:hover {
     background-color: #555;
   }
   
+
+
+
+  #experience {
+    text-align: center;
+    margin-bottom: 1em;
+  }
+  
+  .internships {
+    border: 2px solid #eee;
+    margin: 4em;
+    padding: 3em;
+    border-radius: 10px;
+  }
+  
+  .screenadragogy {
+    display: flex;
+    align-items: flex-start;
+    border: 2px solid greenyellow;
+    border-radius: 10px;
+    box-shadow: 0 0 15px greenyellow;
+    padding: 2em;
+    gap: 1.5em;
+  }
+  
+  #comp-img {
+    flex: 0 0 100px;
+  }
+  
+  #comp-img img {
+    width: 100px;
+    height: auto;
+    border-radius: 5px;
+  }
+  
+  #inter-content {
+    flex: 1;
+    font-size: 0.9em;
+    line-height: 1.5em;
+  }
+  
+
