--- a/portfolio.css
+++ b/portfolio.css
@@ -266,6 +266,7 @@ nav li a:hover{
   #experience {
     text-align: center;
     margin-bottom: 1em;
+    color:  rgb(147, 147, 213);
   }
   
   .internships {
